--- a/package.json
+++ b/package.json
@@ -4,15 +4,33 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.5",
+    "@aws-amplify/auth": "^6.3.16",
+    "@aws-amplify/core": "^6.3.12",
+    "@aws-amplify/react-native": "^1.1.4",
+    "@aws-amplify/storage": "^6.6.3",
+    "@aws-amplify/ui-react-native": "^2.2.5",
+    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-segmented-control/segmented-control": "^2.5.2",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
+    "aws-amplify": "^6.5.3",
     "expo": "~51.0.28",
+    "expo-dev-client": "~4.0.25",
+    "expo-image-picker": "^15.0.7",
     "expo-status-bar": "~1.12.1",
+    "graphql": "^15.8.0",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-native": "0.74.5",
+    "react-native-gesture-handler": "^2.18.1",
+    "react-native-paper": "^5.12.5",
+    "react-native-safe-area-context": "^4.10.9",
+    "react-native-screens": "^3.34.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
