--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@apollo/client": "^3.11.5",
+    "@aws-amplify/api": "^6.0.47",
+    "@aws-amplify/api-graphql": "^4.2.0",
     "@aws-amplify/auth": "^6.3.16",
     "@aws-amplify/core": "^6.3.12",
     "@aws-amplify/react-native": "^1.1.4",
     "@aws-amplify/storage": "^6.6.3",
     "@aws-amplify/ui-react-native": "^2.2.5",
     "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-community/netinfo": "^11.3.2",
     "@react-native-segmented-control/segmented-control": "^2.5.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
@@ -25,12 +28,20 @@
     "expo-image-picker": "^15.0.7",
     "expo-status-bar": "~1.12.1",
     "graphql": "^15.8.0",
+    "graphql-tag": "^2.12.6",
+    "install": "^0.13.0",
+    "moment": "^2.30.1",
+    "npm": "^10.8.3",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-circular-progress": "^1.4.0",
     "react-native-gesture-handler": "^2.18.1",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.10.9",
-    "react-native-screens": "^3.34.0"
+    "react-native-screens": "^3.34.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
