--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "@react-native-community/datetimepicker": "8.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
