--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@aws-amplify/storage": "^6.6.3",
     "@aws-amplify/ui-react-native": "^2.2.5",
     "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-community/netinfo": "^11.3.2",
     "@react-native-segmented-control/segmented-control": "^2.5.2",
     "@react-navigation/native": "^6.1.18",
@@ -37,12 +38,13 @@
     "react-native-circular-progress": "^1.4.0",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-maps": "1.18.0",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
-    "uuid": "^10.0.0",
-    "@react-native-community/datetimepicker": "8.0.1"
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
