--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "aws-amplify": "^6.5.3",
     "expo": "~51.0.28",
     "expo-dev-client": "~4.0.25",
+    "expo-file-system": "~17.0.1",
     "expo-image-picker": "^15.0.7",
     "expo-status-bar": "~1.12.1",
     "graphql": "^15.8.0",
