--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
-    "uuid": "^10.0.0"
+    "react-native-voice": "^0.3.0",
+    "uuid": "^10.0.0",
+    "expo-av": "~14.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
