--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "taskmanagerapp",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
@@ -25,29 +24,34 @@
     "@react-navigation/stack": "^6.4.1",
     "aws-amplify": "^6.5.3",
     "expo": "~51.0.28",
+    "expo-av": "~14.0.7",
     "expo-dev-client": "~4.0.25",
     "expo-file-system": "~17.0.1",
     "expo-image-picker": "^15.0.7",
+    "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
     "graphql": "^15.8.0",
     "graphql-tag": "^2.12.6",
+    "haversine-distance": "^1.2.3",
     "install": "^0.13.0",
     "moment": "^2.30.1",
     "npm": "^10.8.3",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-circular-progress": "^1.4.0",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-get-random-values": "^1.11.0",
     "react-native-google-places-autocomplete": "^2.5.6",
-    "react-native-maps": "1.18.0",
+    "react-native-maps": "1.14.0",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-paper": "^5.12.5",
+    "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
+    "react-native-svg": "15.2.0",
     "react-native-voice": "^0.3.0",
-    "uuid": "^10.0.0",
-    "expo-av": "~14.0.7"
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
