--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest --watchAll"
   },
   "dependencies": {
     "@apollo/client": "^3.11.5",
@@ -16,24 +17,33 @@
     "@aws-amplify/react-native": "^1.1.4",
     "@aws-amplify/storage": "^6.6.3",
     "@aws-amplify/ui-react-native": "^2.2.5",
-    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-community/netinfo": "^11.3.2",
     "@react-native-segmented-control/segmented-control": "^2.5.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "@testing-library/react-native": "^12.6.1",
     "aws-amplify": "^6.5.3",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^29.7.0",
     "expo": "~51.0.28",
+    "expo-application": "~5.9.1",
     "expo-av": "~14.0.7",
+    "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.25",
+    "expo-device": "~6.0.2",
     "expo-file-system": "~17.0.1",
     "expo-image-picker": "^15.0.7",
     "expo-location": "~17.0.1",
+    "expo-notifications": "~0.28.16",
+    "expo-permissions": "^14.4.0",
     "expo-status-bar": "~1.12.1",
     "graphql": "^15.8.0",
     "graphql-tag": "^2.12.6",
     "haversine-distance": "^1.2.3",
     "install": "^0.13.0",
+    "jest": "^29.7.0",
     "moment": "^2.30.1",
     "npm": "^10.8.3",
     "react": "18.2.0",
@@ -51,10 +61,22 @@
     "react-native-screens": "^3.34.0",
     "react-native-svg": "15.2.0",
     "react-native-voice": "^0.3.0",
+    "react-test-renderer": "^18.3.1",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
-  "private": true
+  "private": true,
+  "jest": {
+    "globals": {
+        "__DEV__": true
+    },
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+  },
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@sentry/react-native|native-base|react-native-svg)"
+    ]
+  }
 }
