--- a/package.json
+++ b/package.json
@@ -69,14 +69,16 @@
   },
   "private": true,
   "jest": {
+    "preset": "react-native",
     "globals": {
-        "__DEV__": true
+      "__DEV__": true
     },
     "transform": {
       "^.+\\.js$": "babel-jest"
-  },
+    },
     "transformIgnorePatterns": [
       "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@sentry/react-native|native-base|react-native-svg)"
-    ]
+    ],
+    "setupFilesAfterEnv": ["@testing-library/jest-native/extend-expect"]
   }
 }
