--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@testing-library/jest-native": "^5.4.3"
   },
   "private": true,
   "jest": {
