--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@aws-amplify/react-native": "^1.1.4",
     "@aws-amplify/storage": "^6.6.3",
     "@aws-amplify/ui-react-native": "^2.2.5",
+    "@pchmn/expo-material3-theme": "^1.3.2",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-community/netinfo": "^11.3.2",
@@ -34,6 +35,7 @@
     "expo-dev-client": "~4.0.25",
     "expo-device": "~6.0.2",
     "expo-file-system": "~17.0.1",
+    "expo-haptics": "~13.0.1",
     "expo-image-picker": "^15.0.7",
     "expo-location": "~17.0.1",
     "expo-notifications": "~0.28.16",
@@ -78,8 +80,10 @@
       "^.+\\.js$": "babel-jest"
     },
     "transformIgnorePatterns": [
-      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@sentry/react-native|native-base|react-native-svg)"
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@sentry/react-native|native-base|react-native-svg|aws-amplify)"
     ],
-    "setupFilesAfterEnv": ["@testing-library/jest-native/extend-expect"]
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-native/extend-expect"
+    ]
   }
 }
